--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-firebase/app": "^21.13.0",
-    "@react-native-firebase/auth": "^21.13.0",
-    "@react-native-firebase/firestore": "^21.13.0",
+    "@react-native-firebase/app": "^21.14.0",
+    "@react-native-firebase/auth": "^21.14.0",
+    "@react-native-firebase/firestore": "^21.14.0",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "firebase": "^9.23.0",
     "react": "19.0.0",
     "react-native": "0.79.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "^3.17.3",
     "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.10.0"
+    "react-native-screens": "^4.10.0",
+    "react-native-svg": "^15.11.2",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
