--- a/package.json
+++ b/package.json
@@ -16,15 +16,17 @@
     "@react-native-firebase/app": "^21.14.0",
     "@react-native-firebase/auth": "^21.14.0",
     "@react-native-firebase/firestore": "^21.14.0",
-    "@react-native-picker/picker": "^2.11.0",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/drawer": "^7.3.12",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "date-fns": "^4.1.0",
     "firebase": "^9.23.0",
     "react": "19.0.0",
     "react-native": "0.79.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-notifications": "^5.1.0",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
