--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "^8.3.0",
-    "@react-native-firebase/app": "^21.14.0",
-    "@react-native-firebase/auth": "^21.14.0",
-    "@react-native-firebase/firestore": "^21.14.0",
+    "@react-native-firebase/app": "^22.2.1",
+    "@react-native-firebase/auth": "^22.2.1",
+    "@react-native-firebase/firestore": "^22.2.1",
+    "@react-native-firebase/storage": "^22.2.1",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/drawer": "^7.3.12",
     "@react-navigation/native": "^7.1.6",
@@ -24,14 +26,18 @@
     "firebase": "^9.23.0",
     "react": "19.0.0",
     "react-native": "0.79.0",
+    "react-native-background-actions": "^4.0.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-notifications": "^5.1.0",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
-    "react-native-svg": "^15.11.2",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-svg": "^15.12.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-view-shot": "^4.0.3",
+    "victory-native": "^41.17.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
