--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -91,9 +91,9 @@ android {
     signingConfigs {
         release {
             storeFile file("my-release-key.jks")
-            storePassword "N0long3rhum4n"
+            storePassword "M4CUMB4S4R4V4"
             keyAlias "minha_chave"
-            keyPassword "N0long3rhum4n"
+            keyPassword "M4CUMB4S4R4V4"
         }
         debug {
             storeFile file('debug.keystore')
@@ -108,11 +108,11 @@ android {
         }
         release {
             signingConfig signingConfigs.release
-            minifyEnabled false
-            shrinkResources false
+            minifyEnabled true
+            shrinkResources true
            // signingConfig signingConfigs.debug
            // minifyEnabled enableProguardInReleaseBuilds
-           // proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
 }
