--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@react-navigation/native-stack": "^7.3.10",
     "date-fns": "^4.1.0",
     "firebase": "^9.23.0",
+    "pdf-lib": "^1.17.1",
     "react": "19.0.0",
     "react-native": "0.79.0",
     "react-native-background-actions": "^4.0.1",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-html-to-pdf": "^1.3.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-notifications": "^5.1.0",
     "react-native-reanimated": "^3.17.5",
