--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.79.0",
     "react-native-background-actions": "^4.0.1",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-html-to-pdf": "^1.3.0",
